[package]
name = "streetsweeper"
authors=["Nathaniel Pendy <n@thaniel.dev>"]
description="A rust script for detecting dead .JS files in a repository (not referenced anywhere)"
license="MIT"
repository = "https://github.com/nathanielop/streetsweeper"
homepage = "https://github.com/nathanielop/streetsweeper"
keywords = ["cli", "utilities"]
categories = ["command-line-utilities"]
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1"